tests/integration/buffers/buffer_assignment_error.june
// error: variable is not mutable

let buffer = [1, 2, 3]
buffer[1] = 5
println(buffer[1])